test/tasty/neg/src-2/SColourOpsUnreachable.check
SColourOpsUnreachable_fail.scala:8: warning: unreachable code
      case SColour.Blue => -1 // error: unreachable
                           ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
